
Data Migrations:

 * The migration needed for 0.14.0 has been rewritten to work as a
   standard GenericSetup upgrade.  You can now upgrade via the
   portal_setup tool in the ZMI; go to the upgrades tab and run the
   upgrade registered for version 0.14.0.
   The script also still exists at
   migrations/update_member_project_ids.py if you prefer to run it via
   zopectl.

Features:

 * Added i18n for some wiki history views, if you can call that a feature.

Bug fixes:

 * List manager address was showing up as escaped HTML.
   (slinkp) (openplans:#2706)

 * Wiki version view doesn't error when no version_id is specified
   (slinkp) (http://trac.openplans.org/errors-openplans/ticket/30)

 * Error page doesn't barf on 404s if the catalog has a problem coming
   up with suggestions based on the current URL (slinkp)
   (http://trac.openplans.org/errors-openplans/ticket/23)

 * Fixed rare error in recataloging projects, raised by
   the project's _default_img_data method. (slinkp)

Refactoring:

  * Removed a ton of FormLite and Octopus cruft from opencore/browser.
    Everything left is in opencore/browser/formhandler.py, with more
    tests. (slinkp)


0.14.0 (2008/10/02)
===================

This is mostly a bugfix release, but it does contain a couple of small
enhancements.

Data Migrations:

 * There is one migration script that you should run after upgrading:
   zopectl run opencore/migrations/update_member_project_ids.py
   See the list of bug fixes below for details.


Features:

 * search engine optimization tweaks (novalis)

 * Added per-project security context page for twirlip and other uses 
   at projects/foo/security-context (novalis)

 * Add twirlip transclusion link for wiki pages. (novalis)


Bug fixes and non-featureful changes:

 * Fix bug in reindex_member_project_ids that could prevent a member
   from showing up on a private project's team page.
   (slinkp) (http://trac.openplans.org/errors-openplans/ticket/36)
