@@ -38,14 +38,28 @@
      profile="opencore.configuration:default"
      source="0.13.0"
      destination="0.14.0"
-     sortkey="20">
+     sortkey="10">
 
     <genericsetup:upgradeStep
        title="Fix bad project_ids in membrane index"
        description="Fixes bad data left by a (fixed) bug in member request approval"
        handler=".to_0_14_0.fix_member_indexes"
        />
+
   </genericsetup:upgradeSteps>
 
+  <genericsetup:upgradeSteps
+     profile="opencore.configuration:default"
+     source="0.14.0"
+     destination="0.15.0"
+     sortkey="10">
+
+    <genericsetup:upgradeStep
+       title="Re-import Type information"
+       description="Reruns the 'typeinfo' import step from the profile"
+       handler=".to_0_15_0.reapply_type_information"
+       />
+
+  </genericsetup:upgradeSteps>
 
 </configure>
